# vertex-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml
examples/: a.json  a.rs  basic_usage.rs  client_config.rs  digest.rs  no_signer.rs  orders.rs  place_and_cancel.rs  product_ids_and_symbols.rs
src/: lib.rs  main.rs  vertex_client.rs
src/builders/: mod.rs
src/builders/execute/: burn_lp.rs  burn_vlp.rs  cancellation.rs  cancellation_products.rs  deposit_collateral.rs  deposit_insurance.rs  link_signer.rs  liquidate_subaccount.rs  mint_lp.rs  mint_vlp.rs  mod.rs  place_isolated_order.rs  place_order.rs  slow_mode.rs  transfer_quote.rs  withdraw_collateral.rs
src/builders/indexer/: account_snapshots.rs  candlesticks.rs  events.rs  foundation_taker_rewards.rs  historical_orders.rs  interest_and_funding.rs  leaderboard.rs  maker_statistics.rs  market_snapshots.rs  matches.rs  mod.rs  multi_product_snapshots.rs  product_snapshots.rs  rewards.rs  subaccounts.rs  trades.rs
src/builders/query/: max_lp_mintable.rs  max_order_size.rs  max_vlp_mintable.rs  max_withdrawable.rs  mod.rs
src/builders/trigger/: list_trigger_orders.rs  mod.rs
src/builders/utils/: fee_calculator.rs
src/core/: base.rs  builder.rs  execute.rs  indexer.rs  mod.rs  query.rs
src/sanity/: execute.rs  indexer.rs  mod.rs  query.rs
src/utils/: client_error.rs  client_mode.rs  client_utils.rs  constants.rs  deployment.rs  deposit.rs  mod.rs  nonce.rs  private_key.rs  response.rs  rest.rs  signer.rs  time.rs  wrapped_option_utils.rs
src/vertex_utils/: eip712_structs.rs  engine.rs  indexer.rs  math.rs  mod.rs  product.rs  provider.rs  revert.rs  serialize_utils.rs  subaccount_info.rs  trigger.rs  tx.rs
src/vertex_utils/bindings/: arb_gas_info.rs  clearinghouse.rs  clearinghouse_liq.rs  endpoint.rs  fee_calculator.rs  gas_info.rs  mock_erc20.rs  mock_feed_contract.rs  mod.rs  offchain_book.rs  offchain_exchange.rs  perp_engine.rs  querier.rs  spot_engine.rs  token.rs  verifier.rs  withdraw_pool.rs
src/vertex_utils/configs/abstract-prod/: deployment.json
src/vertex_utils/configs/abstract-test/: deployment.json
src/vertex_utils/configs/avax-prod/: deployment.json
src/vertex_utils/configs/avax-test/: deployment.json
src/vertex_utils/configs/base-prod/: deployment.json
src/vertex_utils/configs/base-test/: deployment.json
src/vertex_utils/configs/bera-prod/: deployment.json
src/vertex_utils/configs/bera-test/: deployment.json
src/vertex_utils/configs/blast-prod/: deployment.json
src/vertex_utils/configs/blast-test/: deployment.json
src/vertex_utils/configs/katana-test/: deployment.json
src/vertex_utils/configs/local/: deployment.json
src/vertex_utils/configs/mantle-prod/: deployment.json
src/vertex_utils/configs/mantle-test/: deployment.json
src/vertex_utils/configs/prod/: deployment.json
src/vertex_utils/configs/sei-prod/: deployment.json
src/vertex_utils/configs/sei-test/: deployment.json
(+4 files in other folders)
