[package]
name = "vertex-sdk"
version = "0.1.1"
description = "Official Rust SDK for the Vertex Protocol API"
readme = "README.md"
repository = "https://github.com/vertex-protocol/vertex-rust-sdk"
edition = "2021"
license = "MIT OR Apache-2.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "digest"
path = "examples/digest.rs"

[[example]]
name = "place_and_cancel"
path = "examples/place_and_cancel.rs"

[[example]]
name = "no_signer"
path = "examples/no_signer.rs"

[[example]]
name = "client_config"
path = "examples/client_config.rs"

[[example]]
name = "orders"
path = "examples/orders.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.21.0", features = ["full"] }
eyre = "0.6.8"

serde = { version = "1.0.144", features = ["derive"]}
serde_url_params = "0.2.1"
ethers = { version = "=1.0.2", features = ["abigen"]}
ethers-core = "=1.0.2"
ethers-providers = "=1.0.2"
ethers-signers = "=1.0.2"
ethers-middleware = "=1.0.2"
ethers-contract = { version = "=1.0.2", features = ["abigen"]}
ethers-derive-eip712 = "=1.0.2"
reqwest = "0.11.14"
serde_json = "1.0.85"
async-trait = "0.1.58"
thiserror = "1.0"
rand = "0.8.4"
rkyv = { version = "0.7.7", features = ["validation"] }
bincode = { version = "1.3.3", features = [] }
