[package]
name = "vertex-sdk"
version = "0.2.2"
description = "Official Rust SDK for the Vertex Protocol API"
readme = "README.md"
repository = "https://github.com/vertex-protocol/vertex-rust-sdk"
edition = "2021"
license = "MIT OR Apache-2.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "digest"
path = "examples/digest.rs"

[[example]]
name = "place_and_cancel"
path = "examples/place_and_cancel.rs"

[[example]]
name = "no_signer"
path = "examples/no_signer.rs"

[[example]]
name = "client_config"
path = "examples/client_config.rs"

[[example]]
name = "orders"
path = "examples/orders.rs"

[[example]]
name = "product_ids_and_symbols"
path = "examples/product_ids_and_symbols.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
bincode = { version = "1.3.3", features = [] }
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["abigen"] }
ethers-contract = { version = "2.0.14", features = ["abigen"] }
ethers-core = "2.0.14"
ethers-middleware = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
eyre = "0.6.8"
include_dir = "0.7.3"
rand = "0.8.4"
reqwest = { version = "0.12.4", features = ["json"] }
rkyv = { version = "0.7.7", features = ["validation"] }

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_url_params = "0.2.1"
thiserror = "1.0"
tokio = { version = "1.21.0", features = ["full"] }
